books-or-lecture/쿠버네티스-인-액션/chapter05/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort  # NodePort 타입으로 지정
  ports:
  - port: 80  # 서비스 내부 Cluster IP 포트
    targetPort: 8080  # 서비스 대상 파드 포트
    nodePort: 30123 # 각 노드에 동일하게 할당할 포트
  selector:
    app: kubia
