books-or-lecture/쿠버네티스-인-액션/chapter05/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.example.com # 인그레스는 kubia.example.com 도메인 이름을 서비스에 매핑
    http:
      paths:
      - path: / # 모든 요청을 kubia-nodeport 서비스의 포트 80 으로 전달
        pathType: Prefix
        backend:
          service:
            name: kubia-nodeport
            port: 
              number: 80
